--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -9,9 +9,9 @@
   <%= stylesheet_link_tag 'print', :media => 'print' -%>
 	<!--[if IE]><%= stylesheet_link_tag 'ie' -%><![endif]-->
 
-  <%= stylesheet_link_tag 'layout' -%>
   <%= stylesheet_link_tag 'menu' -%>
-  <%= stylesheet_link_tag 'forms' -%>
+  <%= stylesheet_link_tag 'local' -%>
+  <%#= stylesheet_link_tag 'forms' -%>
   <%#= stylesheet_link_tag 'tables' -%>
 
   <%= javascript_include_tag :defaults -%>
