changed over to Blueprint CSS framework

--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -40,6 +40,7 @@ table {
 	cursor: pointer;
 	background-color: #BACAF1;
 	border: 1px solid #eee
+	border-collapse: collapse;
 }
 /*thead th, tfoot th, tfoot td {*/
 /*	background:#333 url("/images/llsh.gif") repeat-x;*/
