--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -29,7 +29,7 @@
 		
 		<div class='span-5'>
 			<span class='title last'>GradeSheet</span>
-			<span class='tagline column span-5'>Online grading at its best!</span>
+			<span class='tagline column span-5'>The Best Online Grading!</span>
 		</div>
 		
 		<div class='span-6 push-5 last'>
