--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -39,7 +39,7 @@ body {
 table {
 	cursor: pointer;
 	background-color: #BACAF1;
-	border: 1px solid #eee
+	border: 1px solid #eee;
 	border-collapse: collapse;
 }
 /*thead th, tfoot th, tfoot td {*/
@@ -48,10 +48,10 @@ table {
 /*	cursor: default;*/
 /*	text-align: left;*/
 /*}*/
-/*thead .search {*/
-/*	font-size: 0.8em;*/
-/*	border: medium groove;*/
-/*}*/
+thead .search {
+	font-size: 0.8em;
+	border: medium groove;
+}
 tr.even td {background:inherit;}
 tbody .odd {background:#e5ecf9;}
 tr.current td{background: yellow;font-style: oblique;}
@@ -66,34 +66,11 @@ tr.help td {
 	cursor: default;
 }
 tr.help:hover td{background-color: #009900;}
+.paginate {
+	text-align: center;
+}
 
 
-
-
-
-
-
-
-
-/*.paginate {*/
-/*	text-align: center;*/
-/*}*/
-/*h2 {*/
-/*	color:#666;*/
-/*	margin: 7px 0px 5px;*/
-/*	font-size:16px;*/
-/*}*/
-/*p {*/
-/*	margin-top: 10px;*/
-/*}*/
-/*ul {*/
-/*	list-style-type: inherit;*/
-/*	list-style-position: outside;*/
-/*	margin-left: 10px;*/
-/*}*/
-/*li {*/
-/*	margin: 10px;*/
-/*}	*/
 /*** Scaffold defaults ***/
 .fieldWithErrors {
 	padding: 2px;
