--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -9,7 +9,7 @@
 			<tr><th>Enrolled Students</th><tr>
 		</thead>
 		<tbody>
-			<tr class='help'><td><--&nbsp; Choose a course from the list at the left</td></tr>
+			<tr class='help'><td><--&nbsp; Choose a course from the list at the left or add a new one</td></tr>
 		</tbody>
 	</table>
 </div>
