--- a/app/views/assignments/_assignment_list.erb
+++ b/app/views/assignments/_assignment_list.erb
@@ -1,21 +1,23 @@
 <table class='master sortable'>
   <thead>
     <tr>
-      <th><%= link_to 'New', new_assignment_path( :course_id => @course.id ), :class => 'positive mini' %>
-      Assignment Name <%= h '(' + @assignments.count.to_s + ')'%></th>
+      <th>Assignment Name <%= h '(' + @assignments.count.to_s + ')'%></th>
       <th>Possible points</th>
       <th>Due Date</th>
+			<th width='1'></th>
     </tr>
   </thead>
 	<tbody>
+		<tr><td colspan='0'><%= link_to 'Add New', new_assignment_path( :course_id => @course.id ), :class => 'standard' %></td></tr>
 	<% if @assignments.blank? %>
-		<tr><td colspan='3'>No Assignments Found</td></tr>
+		<tr><td colspan='0'>No Assignments Found</td></tr>
 	<% else %>
 		<% for assignment in @assignments %>
 			<tr class="<%= cycle('odd', 'even') %>" onclick="location.href='<%= url_for( :action => :edit, :id => assignment.id ) %>'"/>
 				<%= content_tag :td, assignment.name %>
 				<%= content_tag :td, assignment.possible_points %>
 				<%= content_tag :td, assignment.due_date_formated %>
+				<td><%= button_to 'Delete', assignment, :method => :delete, :confirm => "Are you sure you want to delete\n\n '" + assignment.name + "'?" %></td>
 			</tr>
 		<% end %>
 	<% end %>
