--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -20,6 +20,13 @@ body {
 #flash {
 	text-align: center;
 }
+#footer {
+	margin: auto;
+	padding-top: 20px;
+	text-align: center;
+	font-size: 0.8em;
+}
+
 .container .error, .container .notice, .container .success {padding:.5em;margin-bottom:1.1em;border:2px solid #ddd;}
 .container .error {background:#FBE3E4;color:#8a1f11;border-color:#FBC2C4;}
 .container .notice {background:#FFF6BF;color:#514721;border-color:#FFD324;}
@@ -28,12 +35,7 @@ body {
 .container .notice a {color:#514721; background:none; padding:0; margin:0; }
 .container .success a {color:#264409; background:none; padding:0; margin:0; }
 
-#footer {
-	margin: auto;
-	padding-top: 20px;
-	text-align: center;
-	font-size: 0.8em;
-}
+div.box {	border: 2px solid #D2DDFE; padding: 0.5em; }
 
 /*** Tables ***/
 table {
@@ -70,6 +72,74 @@ tr.help:hover td{background-color: #009900;}
 	text-align: center;
 }
 
+
+/*** Forms ***/
+.spacer {
+	margin-left:80px; 
+	margin-bottom:10px;
+	font-size:11px;
+	color:#555555;
+	padding: 4px;
+}
+form label {
+	display: block;
+	margin-top: 4px;
+}
+form label span {
+  display:block;
+  float:left;
+  padding-right:15px;
+  width:140px;
+  text-align:right;
+  font-weight:bold;
+}
+form .required {
+/*	border-right: solid 2px red;*/
+	background: transparent url(/images/bullet_red.png) no-repeat scroll right center;
+}
+
+/*** Buttons ***/
+.positive{
+  background-color: green;
+  padding:0px 6px;
+  border:1px outset #3b6e22;
+  height:24px; 
+  line-height:24px;
+  color:#FFFFFF;
+  font-size:12px;
+  margin-right:10px;
+  display:inline-block;
+  text-decoration:none;
+  width: 100px;
+  text-align: center;
+}
+.negative{
+  border:2px outset #fbc2c4;
+	background:#FBE3E4;color:#8a1f11;
+  padding:0px 6px;
+  height:24px; 
+  line-height:24px;
+  font-size:12px;
+  margin-right:10px;
+  display:inline-block;
+  text-decoration:none;
+  width: 100px;
+  text-align: center;
+}
+.standard{
+  background: grey;
+  padding:0px 6px;
+  border:1px outset #3b6e22;
+  height:24px; 
+  line-height:24px;
+  color:#FFFFFF;
+  font-size:12px;
+  margin-right:10px;
+  display:inline-block;
+  text-decoration:none;
+  width: 100px;
+  text-align: center;
+}
 
 /*** Scaffold defaults ***/
 .fieldWithErrors {
