--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -93,10 +93,9 @@ form label span {
   text-align:right;
   font-weight:bold;
 }
-form .required {
-/*	border-right: solid 2px red;*/
-	background: transparent url(/images/bullet_red.png) no-repeat scroll right center;
-}
+form .required {background: transparent url(/images/bullet_red.png) no-repeat scroll right center;}
+
+.bad-grade {background:#FBE3E4 none repeat scroll 0 0;border-color:#FBC2C4;color:#8A1F11;}
 
 /*** Buttons ***/
 .positive{
