--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,3 +1,11 @@
+<% content_for :left do %>
+	<%= show_course_list %>
+<% end %>
+
 <h2>Choose your report</h2>
 
-<a href='reports.pdf'>Sample Report</a>
+<ul>
+	<li><a href='reports/sample_report.pdf'>Sample Report</a> - A sample report</li>
+	<li><a href='reports/sample_report.pdf'>Sample Report</a> - An example report card</li>
+	<li><a href='reports/report_card.pdf?student=76558238'>Report Card</a> - A report card for student 'Andrew Hurt'</li>
+</ul>	
