more updates to the report card system

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -7,5 +7,5 @@
 <ul>
 	<li><a href='reports/sample_report.pdf'>Sample Report</a> - A sample report</li>
 	<li><a href='reports/sample_report.pdf'>Sample Report</a> - An example report card</li>
-	<li><a href='reports/report_card.pdf?student=76558238'>Report Card</a> - A report card for student 'Andrew Hurt'</li>
+	<li><a href='reports/report_card.pdf?student_id=343839479'>Report Card</a> - A report card for student 'Andrew Hurt'</li>
 </ul>	
