moved reports around a bit to clean up the directory structure.

--- a/app/views/reports/_report_list.erb
+++ b/app/views/reports/_report_list.erb
@@ -1,7 +1,6 @@
 <% reports = [
-		{:name => 'Report Card (Param)', :url => '/reports/report_card'},
-		{:name => 'Student Roster', :url => '/reports/student_roster'},
-		{:name => 'Report Card', :url => '/reports/report_card?student_id=34389479'}]%>
+		{:name => 'Report Card', :url => '/reports/report_card'},
+		{:name => 'Student Roster', :url => '/reports/student_roster'}]%>
 		
 <table>
 	<thead>
