--- a/app/views/settings/_settings_list.erb
+++ b/app/views/settings/_settings_list.erb
@@ -1,5 +1,6 @@
 <% items = [
-		{:name => 'Grading Terms', :url => '/settings/terms'},
+		{:name => 'Grading Periods', :url => '/settings/terms'},
+		{:name => 'Grading Scales', :url => '/settings/scales'},
 		{:name => 'School Calendar', :url => '/settings/calendar'}]%>
 		
 <table>
