--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -2,4 +2,14 @@
 	<%= render :partial => 'settings_list' %>
 <% end %>
 
-INDEX
+<h2>My Settings</h2>
+
+<p>This screen allows you to customize <%= SITE_NAME %> for your own needs.  You can
+change sorting options, display colors, etc.</p>
+
+<p>Administrators use this screen to configure <%= SITE_NAME %> for the whole school.
+Configuring the school year, building grading scales, and changing the site name
+are some of the things you can do from this screen.</p>
+
+<p>Choose one of the options from the menu on the left side of the screen to 
+continue.</p>
