--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -4,7 +4,7 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='en' lang='en'>
 <head>
   <meta http-equiv='content-type' content='text/html;charset=UTF-8' />
-  <title>Gradesheet - <%= controller.controller_name.humanize %></title>
+  <title><%= SITE_NAME %> - <%= controller.controller_name.humanize %></title>
   <%= stylesheet_link_tag 'screen' -%>
   <%= stylesheet_link_tag 'print', :media => 'print' -%>
 	<!--[if IE]><%= stylesheet_link_tag 'ie' -%><![endif]-->
@@ -26,7 +26,7 @@
 		<div class='span-3'><img class='top' src='/images/logo.png' width='60px' height='60px'></div>
 		
 		<div class='span-5'>
-			<span class='title last'>GradeSheet</span>
+			<span class='title last'><%= SITE_NAME %></span>
 			<span class='tagline column span-5'>The Best Online Grading!</span>
 		</div>
 		
