--- a/app/views/settings/terms/edit.html.erb
+++ b/app/views/settings/terms/edit.html.erb
@@ -5,37 +5,32 @@
 <%= error_messages_for "term" %>
 
 <div class='box'>
-<% form_for "term[]", :html => {:method => :put}, :url => {:action => :update} do |f| %>
+<% form_for @term, :html => {:method => :put}, :url => {:action => :update} do |f| %>
 	<label><span class='required'>School Year</span>
-		<input id="school_year" name="school_year" size="10" type="text" value="<%= @terms[0][:school_year] %>" />
+		<%= f.text_field :school_year %>
 	</label>
 	
-	<div class='spacer'>&nbsp;</div>
+	<label><span class='required'>Term Name</span>
+		<%= f.text_field :name %>
+	</label>
+
+	<label><span class='required'>Begin Date</span>
+		<%= f.date_select :begin_date %>
+	</label>
+
+	<label><span class='required'>End Date</span>
+		<%= f.date_select :end_date %>
+	</label>
 	
-	<table>
-		<thead>
-			<th>Term Name</th>
-			<th>Begin Date</th>
-			<th>End Date</th>
-			<th>Active</th>
-			<th>Delete?</th>
-		</thead>
-		<tbody>
-			<% for @term in @terms %>
-				<tr class='<%= cycle('even', 'odd')%>'>		
-					<td><%= f.text_field :name, :size => 10 %></td>
-					<td><%= f.date_select :begin_date %></td>
-					<td><%= f.date_select :end_date %></td>
-					<td><%= f.check_box :active %></td>
-					<td><input type="checkbox" id="term_delete" name="term[<%= @term.id %>][delete]" value="1" /></td>
-				</tr>
-			<% end %>
-		</tbody>
-	</table>
-		
-		<div class="spacer">
-			<%= submit_tag 'Save Model', :class => 'positive' %>
-			<%= link_to 'Cancel', terms_path(), :class => 'standard' %>
-		</div>
+	<label><span>Active?</span>
+		<%= f.check_box :active %>
+	</label>
+
+	<div class='spacer'>&nbsp;</div>
+			
+	<div class="spacer">
+		<%= submit_tag 'Save Term', :class => 'positive' %>
+		<%= link_to 'Cancel', terms_path(), :class => 'standard' %>
+	</div>
 <% end %>
 </div>
