--- a/app/views/settings/terms/index.html.erb
+++ b/app/views/settings/terms/index.html.erb
@@ -6,17 +6,19 @@
 <table>
 	<thead>
 		<th>School Year</th>
-		<th>Terms</th>
+		<th>Name</th>
 		<th>Begin Date</th>
 		<th>End Date</th>
+		<th>Active?</th>
 	</thead>
 	<tbody>
 		<% for term in @terms %>
-			<tr class="<%= cycle('odd', 'even')%>">
-				<td><%= link_to term.school_year, edit_term_path(term.school_year) %></td>
-				<%= content_tag :td, term.total_terms %>
+			<tr class="<%= cycle('odd', 'even')%>" onclick="location.href='<%= url_for(term) + '/edit' %>'">
+				<td><%= link_to term.school_year, edit_term_path(term) %></td>
+				<%= content_tag :td, term.name %>
 				<%= content_tag :td, term.begin_date %>
 				<%= content_tag :td, term.end_date %>
+				<%= content_tag :td, ( check_box_tag :active, term.active, term.active, :disabled => true ) %>
 			</tr>
 		<% end %>
 
