minor spelling correction

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -11,8 +11,8 @@
 <h2>Welcome to <%= SITE_NAME %>!</h2>
 
 <p>This is a pre-Beta version of the <%= SITE_NAME %> software.  All of the data here is
-generated and most of it is non-sensical.  However, it is a starting point and 
-should give you enough 'things' to be able to excercise the program a little bit.
+generated and most of it is nonsensical.  However, it is a starting point and 
+should give you enough 'things' to be able to exercise the program a little bit.
 Please, take a look around and push all the buttons.  You can't hurt anything here.
 If you find something interesting, please <a href='mailto:gradesheet@kangaroobox.com'>let us know about it</a>.</p>
 
