--- a/app/views/assignments/_assignment_list.erb
+++ b/app/views/assignments/_assignment_list.erb
@@ -8,7 +8,7 @@
     </tr>
   </thead>
 	<tbody>
-		<tr><td colspan='0'><%= link_to 'Add New', new_assignment_path( :course_id => @course.id ), :class => 'standard' %></td></tr>
+		<tr><td colspan='0'><%= link_to 'Add Assignment', new_assignment_path( :course_id => @course.id ), :class => 'positive' %></td></tr>
 	<% if @assignments.blank? %>
 		<tr><td colspan='0'>No Assignments Found</td></tr>
 	<% else %>
