--- a/app/views/settings/terms/index.html.erb
+++ b/app/views/settings/terms/index.html.erb
@@ -2,7 +2,6 @@
 	<%= render :partial => 'settings/settings_list' %>
 <% end %>
 
-<h2>Grading Periods</h2>
 <table>
 	<thead>
 		<th>School Year</th>
@@ -10,8 +9,10 @@
 		<th>Begin Date</th>
 		<th>End Date</th>
 		<th>Active?</th>
+		<th width='1'></th>		
 	</thead>
 	<tbody>
+		<tr><td colspan='0'><%= link_to "Add Period", new_term_path(), :class => "positive" %></td></tr>
 		<% for term in @terms %>
 			<tr class="<%= cycle('odd', 'even')%>" onclick="location.href='<%= url_for(term) + '/edit' %>'">
 				<td><%= link_to term.school_year, edit_term_path(term) %></td>
@@ -19,9 +20,8 @@
 				<%= content_tag :td, term.begin_date %>
 				<%= content_tag :td, term.end_date %>
 				<%= content_tag :td, ( check_box_tag :active, term.active, term.active, :disabled => true ) %>
+				<td><%= button_to 'Delete', term, :method => :delete, :confirm => "Are you sure you want to delete\n\n '" + term.name + "'?" %></td>
 			</tr>
 		<% end %>
-
 	</tbody>
 </table>
-
