--- a/app/views/settings/scales/show.html.erb
+++ b/app/views/settings/scales/show.html.erb
@@ -1,5 +1,7 @@
 <% content_for :left do %>
-	<%= render :partial => 'settings_list' %>
+	<%= render :partial => 'settings/settings_list' %>
 <% end %>
 
 SHOW
+
+<%= debug @scale %>
