--- a/app/views/assignments/_assignment_list.erb
+++ b/app/views/assignments/_assignment_list.erb
@@ -17,7 +17,10 @@
 				<%= content_tag :td, assignment.name %>
 				<%= content_tag :td, assignment.possible_points %>
 				<%= content_tag :td, assignment.due_date_formated %>
-				<td><%= button_to 'Delete', assignment, :method => :delete, :confirm => "Are you sure you want to delete\n\n '" + assignment.name + "'?" %></td>
+				<td><%= button_to 'Delete', assignment, 
+									:method => :delete, 
+									:disabled => !assignment.gradations.empty?,
+									:confirm => "Are you sure you want to delete\n\n '" + assignment.name + "'?" %></td>
 			</tr>
 		<% end %>
 	<% end %>
