--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -20,7 +20,10 @@
 	<% end %>
 	
 	<div class="spacer">
-		<%= button_to 'Delete Course', @course, :confirm => 'Are you sure?', :method => :delete, :class=>'negative' %>
+		<%= button_to 'Delete Course', @course, 
+					:method => :delete,
+					:disabled => !@course.assignments.empty?,
+					:confirm => 'Are you sure?', :class=>'negative' %>
 		<%#= link_to 'Cancel', {:action=> 'index', :controller=> 'users/'+user.class.name.tableize}, :class => 'standard' %>
 	</div>
 
