--- a/app/views/settings/scales/index.html.erb
+++ b/app/views/settings/scales/index.html.erb
@@ -13,6 +13,7 @@
 			<tr class="<%= cycle('odd', 'even')%>" onclick="location.href='<%#= url_for(scale) + '/edit' %>'">
 				<td><%= link_to scale.name, edit_scale_path(scale) %></td>
 				<td><%= button_to 'Delete', scale_path(scale), :method => :delete, 
+										:disabled => !scale.courses.empty?,
 										:confirm => "Are you sure you want to delete\n\n '" + scale.name + "'?" %></td>
 			</tr>
 		<% end %>
