--- a/app/views/settings/terms/index.html.erb
+++ b/app/views/settings/terms/index.html.erb
@@ -6,8 +6,8 @@
 
 <table>
 	<thead>
-		<th>School Year</th>
 		<th>Name</th>
+		<th>School Year</th>
 		<th>Begin Date</th>
 		<th>End Date</th>
 		<th>Active?</th>
@@ -17,8 +17,8 @@
 		<tr><td colspan='0'><%= link_to "Add Period", new_term_path(), :class => "positive" %></td></tr>
 		<% for term in @terms %>
 			<tr class="<%= cycle('odd', 'even')%>" onclick="location.href='<%= url_for(term) + '/edit' %>'">
-				<td><%= link_to term.school_year, edit_term_path(term) %></td>
-				<%= content_tag :td, term.name %>
+				<td><%= link_to term.name, edit_term_path(term) %></td>
+				<%= content_tag :td, term.school_year %>
 				<%= content_tag :td, term.begin_date %>
 				<%= content_tag :td, term.end_date %>
 				<%= content_tag :td, ( check_box_tag :active, term.active, term.active, :disabled => true ) %>
