run on Rails 2.1.0; use only the 'active' terms

--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -15,7 +15,7 @@
 			</label>
 
 			<label><span>Grading Term</span>
-				<%= collection_select :course, :term_id, Term.find(:all), :id, :name %>
+				<%= collection_select :course, :term_id, Term.active, :id, :name %>
 			</label>
 
 			<label><span>Grading Scale</span>
