minor CSS tweaks to make the flash notifications more pretty.

--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -27,7 +27,7 @@
 		
 		<div class='span-5'>
 			<span class='title last'><%= SITE_NAME %></span>
-			<span class='tagline column span-5'>The Best Online Grading!</span>
+			<span class='tagline column span-5'><%= TAG_LINE %></span>
 		</div>
 		
 		<div class='span-6 push-5 last'>
