--- a/app/views/settings/scales/edit.html.erb
+++ b/app/views/settings/scales/edit.html.erb
@@ -5,8 +5,7 @@
 <%= error_messages_for "scale" %>
 
 <div class='box'>
-<% form_for :scale, @scale,
-		:url => { :action => :update }, :html => { :method => :put } do |f| %>
+<% form_for @scale do |f| %>
 	<%= f.error_messages %>
 	<label><span class='required'>Scale Name</span>
 		<%= f.text_field :name %>
