Grading Scales are now working properly. I had to redo some things in my routes.rb for Rails to start recognizing the grading_scales controller properly.

--- a/app/views/settings/_settings_list.erb
+++ b/app/views/settings/_settings_list.erb
@@ -1,6 +1,6 @@
 <% items = [
 		{:name => 'Grading Periods', :url => '/settings/terms'},
-		{:name => 'Grading Scales', :url => '/settings/scales'},
+		{:name => 'Grading Scales', :url => '/settings/grading_scales'},
 		{:name => 'School Calendar', :url => '/settings/events'}]%>
 		
 <table>
